Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanTextField.quorum
class Main
    text t
    boolean bool
    action Main
        t = "true"
        bool = cast(boolean, b)
        if bool = true
            output "passed"
        end
    end
end