Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanTextWrapped.quorum
class main
    action Main
        text t = "Something!"
        boolean b = t
    end
end